// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature/left-sidebar/CopyrightFooter should correctly render with the current year 1`] = `
<div
  className="copyright-footer"
>
  <small
    className="copyright"
  >
    <LinkBase
      href="/about-us"
    >
      © 
      2018
       Box Inc.
    </LinkBase>
  </small>
</div>
`;

exports[`feature/left-sidebar/CopyrightFooter should handle arbitrary properties added to link with proper format 1`] = `
<div
  className="copyright-footer"
>
  <small
    className="copyright"
  >
    <LinkBase
      data-resin-target="testtarget"
      href="/test"
    >
      © 
      2018
       Box Inc.
    </LinkBase>
  </small>
</div>
`;

exports[`feature/left-sidebar/CopyrightFooter should include default link when no href is provided 1`] = `
<div
  className="copyright-footer"
>
  <small
    className="copyright"
  >
    <LinkBase
      data-resin-target="testtarget"
      href="/about-us"
    >
      © 
      2018
       Box Inc.
    </LinkBase>
  </small>
</div>
`;
